- Handle empty status displays properly
- Recognize multiple breakpoints as reported by the Perl debugger 
  as of Perl 5.005 and later
- Handle incomplete DBX output correctly, such as prompts of the
  debugged program.  For details, see the new `positionTimeout' and
  `displayTimeout' resources.
- Under certain circumstances, DDD could hang searching for a Java
  class.

There are no new features in DDD 3.1.1.


DDD 3.1
=======

DDD 3.1 brings Perl support, Python support, data plotting, Undo/Redo,
and advanced data exploration.


Debuggers and Languages
-----------------------

- Perl support.  DDD supports debugging Perl programs, using the Perl
  debugger.  Requires Perl 5.003 or later.

- Python support.  DDD supports debugging Python programs, using the
  PYDB command-line debugger.  See the `pydb' sub-directory for PYDB
  source and details.  
  Python support was contributed by Richard Wolff <rwolff@noao.edu>.

- By default, DDD will automatically select the most appropriate
  debugger for the given arguments (i.e. Perl for perl files, JDB for
  Java classes, etc.).

- Improved JDB class search.  Using JDB, `File->Open Class' no longer
  searches the class path for .java source files; instead, it searches
  for `.class' files and returns all classes with accessible `.java'
  sources.  Subdirectories are also searched.

- Further improved FORTRAN support.  When looking up FORTRAN functions
  and variables, DDD also tries to append two trailing underscores
  `__', as generated by g77 on several architectures.


Plotting
--------

- Array plots.  You can plot one- and two-dimensional numeric arrays
  via the `Plot' button.  This gives a totally new meaning to `data
  display debugger'.  Requires Gnuplot 3.5 or later.

- History plots.  You can plot the history of a numerical variable,
  i.e. the sequence of previous values.

- Plots can be animated, visualizing algorithm effects.


Undo/Redo
---------
